# JudgeEngine

./: .gitignore  LICENSE.md  README.md  nuxt.config.ts  package-lock.json  package.json  tailwind.config.js
Engine/: CMakeLists.txt  main.cpp
assets/scss/: main.scss
components/: SiteFooter.vue  SiteHeader.vue
layouts/: default.vue
pages/: index.vue
pages/[problem_id]/: solve.vue
plugins/: markdownit.ts  monaco.client.ts
server/db/migrations/: 0000_violet_cerebro.sql
server/db/migrations/meta/: 0000_snapshot.json  _journal.json
